# ChessGame-1v1

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  resources.qrc
libs/: capturedpieces.cpp  capturedpieces.h  chessboard.cpp  chessboard.h  chessboardwidget.cpp  chessboardwidget.h  managebits.cpp  managebits.h  piece.cpp  piece.h  position.cpp  position.h  promotiondialog.cpp  promotiondialog.h  resultdialog.cpp  resultdialog.h
